# platforce-doc

./: .gitignore  404.html  CODEOWNERS  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-to-pages.yml  main.yml  validate.yml  zizmor.yml
Reference/: index.html
Reference/naming-convention/: index.html
Reference/naming-conventions/: index.html
Team Platforce/about/: index.html
Team Platforce/contact/: index.html
Team Platforce/mission-statement/: index.html
docs/: .nav.yml  .pages  index.md  project-readme.md
docs/Reference/: .pages  index.md  naming-convention.md
docs/Team Platforce/: about.md  contact.md  mission-statement.md
docs/explanation/: .nav.yml  .pages  index.md  saas-proxy.md
docs/how-to-guides/: .nav.yml  .pages  createDXUser.md  exposeFssAppToSalesforce.md  getOrgFromScratchPool.md  index.md  postApplicationLogToSlack.md  setUpNamedCredential.md  setUpSlackAlert.md
docs/javascript/: amplitude_events.js
docs/referen/: index.md
docs/reference/: .nav.yml  abbreviation.md  acronyms.md  index.md  lightningPageRecords.md  names-and-aliases.md  scratchPools.md
docs/security/: .nav.yml  .pages  index.md
docs/stylesheets/: extra.css  uu.css
docs/team-platforce/: .nav.yml  .pages  contact.md  mission-statement.md
docs/tutorial/: .nav.yml  .pages  index.md  quickstart-setup-linting.md
explanation/: index.html
how-to-guides/: index.html
project-readme/: index.html
referen/: index.html
reference/: index.html
search/: search_index.json
security/: index.html
tutorial/: index.html
(+130 files in other folders)
