[tool.poetry]
name = "platforce-doc"
version = "0.1.0"
description = "Platforce Documentation for Developers in NAV on the Salesforce Platform"
authors = []
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.16"
mkdocs-material = "^9.6.17"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-awesome-nav = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"